# src/api/controllers/index.ts
@@ -1,1 +1,4 @@
 export * from './greeting';
+export * from './auth';
+export * from './greeting';
+export * from './user';
